# VncViewerForHarmonyNext

./: .gitignore  .gitmodules  README.md  README_en.md  build-profile.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
application/: oh-package-lock.json5  oh-package.json5
application/src/main/: module.json5
application/src/main/ets/applicationability/: ApplicationAbility.ets
application/src/main/ets/applicationbackupability/: ApplicationBackupAbility.ets
application/src/main/ets/pages/: HistorySelector.ets  Index.ets  VncViewerPage.ets
application/src/main/ets/utils/: FileStorage.ets  KeyMap.ets  VncClient.ets
application/src/main/resources/base/element/: string.json
application/src/main/resources/base/profile/: main_pages.json  router_map.json
application/src/main/resources/en_US/element/: string.json
application/src/main/resources/zh_CN/element/: string.json
application/src/ohosTest/: module.json5
n_vnc/: Index.ets  build-profile.json5  oh-package-lock.json5  oh-package.json5
n_vnc/src/main/: module.json5
n_vnc/src/main/cpp/: CMakeLists.txt  napi_init.cpp  utils.cpp  vnc_viewer.cpp
n_vnc/src/main/cpp/include/: utils.hpp  vnc_viewer.hpp
n_vnc/src/main/cpp/types/libn_vnc/: Index.d.ts  oh-package.json5
n_vnc/src/main/ets/pages/: Index.ets
n_vnc/src/main/ets/utils/: napi.ets
n_vnc/src/ohosTest/: module.json5
